--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "url": "https://github.com/chrisclarkes/guitardb/issues"
   },
   "dependencies": {
-    "express": "^4.13.4"
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "express": "^4.13.4",
+    "q": "^1.4.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "karma": "^0.13.21",
+    "karma-phantomjs-launcher": "^1.0.0",
     "mocha": "^2.4.5",
+    "phantomjs-prebuilt": "^2.1.4",
     "sinon": "^1.17.3",
     "supertest": "^1.2.0"
   }
