--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "express": "^4.13.4",
+    "less-middleware": "^2.0.1",
     "mongoose": "^4.4.3",
     "q": "^1.4.1"
   },
